--- a/AlgoLoan/Areas/Admin/Views/Dashboard/ViewSubscriptions.cshtml
+++ b/AlgoLoan/Areas/Admin/Views/Dashboard/ViewSubscriptions.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewBag.Title = "ViewSubscriptions";
     Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Count = 1;
 }
 
 <div class="container">
@@ -10,25 +11,34 @@
         <div class="col-lg-12 col-md-12 col-sm-12 mt-5">
             <table class="table table-striped table-hover text-center" id="subTable">
                 <thead class="thead-light">
-                <tr>
-                    <th scope="col">
-                        S/N
-                    </th>
-                    <th scope="col">
-                        Package
-                    </th>
-                    <th scope="col">
-                        Start Date
-                    </th>
-                    <th scope="col">
-                        End Date
-                    </th>
-                </tr>
+                    <tr>
+                        <th scope="col">
+                            S/N
+                        </th>
+                        <th scope="col">
+                            User name
+                        </th>
+                        <th scope="col">
+                            Package
+                        </th>
+                        <th scope="col">
+                            Start Date
+                        </th>
+                        <th scope="col">
+                            End Date
+                        </th>
+                    </tr>
                 </thead>
                 <tbody>
                 @foreach (var item in Model)
                 {
                     <tr>
+                        <td>
+                            @(ViewBag.Count++)
+                        </td>
+                        <td>
+                            User name
+                        </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.type) Package
                         </td>
