--- a/AlgoLoan/Views/Account/Login.cshtml
+++ b/AlgoLoan/Views/Account/Login.cshtml
@@ -4,59 +4,122 @@
     ViewBag.Title = "Log in";
 }
 
-<h2>@ViewBag.Title.</h2>
-<div class="row">
-    <div class="col-md-8">
-        <section id="loginForm">
-            @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-            {
-                @Html.AntiForgeryToken()
-                <h4>Use a local account to log in.</h4>
-                <hr />
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                <div class="form-group">
-                    @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-                    <div class="col-md-10">
-                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+<section class="testimonials pt-5">
+    <div class="container">
+        <div class="row">
+            <div class="offset-md-3 col-md-6">
+                <div class="">
+
+                    <div class="">
+                        <h3 class="text-center text-white">Login to your Account</h3>
                     </div>
-                </div>
-                <div class="form-group">
-                    @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-                    <div class="col-md-10">
-                        @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <div class="checkbox">
-                            @Html.CheckBoxFor(m => m.RememberMe)
-                            @Html.LabelFor(m => m.RememberMe)
+                    <div class="" style="padding: 40px; width: 100%;">
+                        @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "align-self-center", role = "form" }))
+                        {
+                            @Html.AntiForgeryToken()
+                            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                            <div class="form-group">
+                                @Html.LabelFor(m => m.Email, new { @class = "text-white" })
+                                <div class="col-md-12">
+                                    @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                                    @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger form-text" })
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                @Html.LabelFor(m => m.Password, new { @class = "text-white" })
+                                <div class="col-md-12">
+                                    @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+                                    @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+                            <div class="form-group form-check">
+                                <div>
+                                    <div class="">
+                                        @Html.CheckBoxFor(m => m.RememberMe, new { @class = "form-check-input" })
+                                        @Html.LabelFor(m => m.RememberMe, new { @class = "form-check-label text-white" })
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="">
+                                    <input type="submit" value="Log in" class="btn btn-primary" />
+                                </div>
+                            </div>
+                            <div class="form-row">
+                                <div class="form-group col-md-6">
+                                    @Html.ActionLink("Forgot your password?", "ForgotPassword")
+                                </div>
+                                <div class="form-group col-md-6">
+                                    @Html.ActionLink("Register as a new user", "Register")
+                                </div>
+                            </div>
+
+                        }
+                        <div class="text-center text-white">
+                            <h4 style="margin-bottom: 15px;">or Login with:</h4>
+                            <section id="socialLoginForm">
+                                @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
+                            </section>
                         </div>
                     </div>
                 </div>
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Log in" class="btn btn-default" />
-                    </div>
-                </div>
-                <p>
-                    @Html.ActionLink("Register as a new user", "Register")
-                </p>
-                @* Enable this once you have account confirmation enabled for password reset functionality
-                    <p>
-                        @Html.ActionLink("Forgot your password?", "ForgotPassword")
-                    </p>*@
-            }
-        </section>
+            </div>
+        </div>
     </div>
-    <div class="col-md-4">
-        <section id="socialLoginForm">
-            @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
-        </section>
-    </div>
-</div>
+</section>
+
+@* <div class="row"> *@
+@*     <div class="col-md-8"> *@
+@*         <section id="loginForm"> *@
+@*             @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" })) *@
+@*             { *@
+@*                 @Html.AntiForgeryToken() *@
+@*                 <h4>Use a local account to log in.</h4> *@
+@*                 <hr /> *@
+@*                 @Html.ValidationSummary(true, "", new { @class = "text-danger" }) *@
+@*                 <div class="form-group"> *@
+@*                     @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" }) *@
+@*                     <div class="col-md-10"> *@
+@*                         @Html.TextBoxFor(m => m.Email, new { @class = "form-control" }) *@
+@*                         @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" }) *@
+@*                     </div> *@
+@*                 </div> *@
+@*                 <div class="form-group"> *@
+@*                     @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" }) *@
+@*                     <div class="col-md-10"> *@
+@*                         @Html.PasswordFor(m => m.Password, new { @class = "form-control" }) *@
+@*                         @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" }) *@
+@*                     </div> *@
+@*                 </div> *@
+@*                 <div class="form-group"> *@
+@*                     <div class="col-md-offset-2 col-md-10"> *@
+@*                         <div class="checkbox"> *@
+@*                             @Html.CheckBoxFor(m => m.RememberMe) *@
+@*                             @Html.LabelFor(m => m.RememberMe) *@
+@*                         </div> *@
+@*                     </div> *@
+@*                 </div> *@
+@*                 <div class="form-group"> *@
+@*                     <div class="col-md-offset-2 col-md-10"> *@
+@*                         <input type="submit" value="Log in" class="btn btn-default" /> *@
+@*                     </div> *@
+@*                 </div> *@
+@*                 <p> *@
+@*                     @Html.ActionLink("Register as a new user", "Register") *@
+@*                 </p> *@
+@*                 @* Enable this once you have account confirmation enabled for password reset functionality *@
+@*                     <p> *@
+@*                         @Html.ActionLink("Forgot your password?", "ForgotPassword") *@
+@*                     </p>*@
+@*             } *@
+@*         </section> *@
+@*     </div> *@
+@*     <div class="col-md-4"> *@
+@*         <section id="socialLoginForm"> *@
+@*             @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl }) *@
+@*         </section> *@
+@*     </div> *@
+@* </div> *@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
