--- a/AlgoLoan/Views/Home/About.cshtml
+++ b/AlgoLoan/Views/Home/About.cshtml
@@ -1,7 +1,15 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<div class="container min-vh-80">
+    <div class="row">
+        <div class="col-12">
+            <h2>@ViewBag.Title.</h2>
+            <h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+            <p>Use this area to provide additional information.</p>
+        </div>
+        
+    </div>
+</div>
+
