--- a/AlgoLoan/Views/Home/Providers.cshtml
+++ b/AlgoLoan/Views/Home/Providers.cshtml
@@ -4,41 +4,47 @@
     ViewBag.Title = "Providers";
 }
 
-<div class="container">
-    <div class="row">
-        <div class="col-lg-12 col-md-12 col-sm-12 top-pad2">
-            @if (Model == null)
-            {
-                <div class="bold-black text-center">No loan Provider found.</div>
-            }
-            else
-            {
-                <table class="table table-striped ">
-                    <thead>
-                    <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">Provider name</th>
-                        <th scope="col">Amount</th>
-                        <th scope="col">Action</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    @for (int i = 0; i < Model.Item2.Count; i++)
-                    {
-                        <tr>
-                            <th scope="row">@(i + 1)</th>
-                            <td>@Model.Item2[i].name</td>
-                            <td>@(Model.Item1.amount.ToString("C", CultureInfo.CreateSpecificCulture("NG-ng")))</td>
-                            <td>
-                                <a class="btn btn-success" href="@Url.Action("Details", "Provider", new {id = @i})">See more details</a>
-                            </td>
-                        </tr>
-                    }
+<section class="min-vh-80 providers">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-12 mt-5">
+                @if (Model == null)
+                {
+                    <div class="jumbotron shadow-lg">
+                        <div class="bold-black text-center">No loan Provider found.</div>
+                    </div>
 
-                    </tbody>
-                </table>
-            }
+                }
+                else
+                {
+                    <table class="table table-striped text-white">
+                        <thead>
+                            <tr>
+                                <th scope="col">#</th>
+                                <th scope="col">Provider name</th>
+                                <th scope="col">Amount</th>
+                                <th scope="col">Action</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @for (int i = 0; i < Model.Item2.Count; i++)
+                            {
+                                <tr>
+                                    <th scope="row">@(i + 1)</th>
+                                    <td>@Model.Item2[i].name</td>
+                                    <td>@(Model.Item1.amount.ToString("C", CultureInfo.CreateSpecificCulture("NG-ng")))</td>
+                                    <td>
+                                        <a class="btn btn-success" href="@Url.Action("Details", "Provider", new {id = @i})">See more details</a>
+                                    </td>
+                                </tr>
+                            }
+
+                        </tbody>
+                    </table>
+                }
+            </div>
         </div>
     </div>
-</div>
+
+</section>
 
