--- a/AlgoLoan/Views/Shared/_Layout.cshtml
+++ b/AlgoLoan/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-dark top-header">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <h1 class="logo">
                 @Html.ActionLink("Algo Loan Comparer", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </h1>
@@ -36,7 +36,7 @@
     <footer>
         <div class="container">
             <div class="copyright">
-                <p class="copy-right text-center ">
+                <p class="text-white text-center ">
                     &copy; @DateTime.Now.Year - Algo Loan Comparer
                 </p>
             </div>
@@ -46,5 +46,6 @@
     @Scripts.Render("~/bundles/jquery")
     @RenderSection("Scripts", false)
     @Scripts.Render("~/bundles/bootstrap")
+<script src="https://use.fontawesome.com/4108d38f49.js"></script>
 </body>
 </html>
