Updated admin dashboard views

--- a/AlgoLoan/Areas/Admin/Views/Dashboard/Index.cshtml
+++ b/AlgoLoan/Areas/Admin/Views/Dashboard/Index.cshtml
@@ -79,7 +79,7 @@
                     <div class="col-md-9 text-left">
                         <h6 class="ad-info text-uppercase mb-2">Most searched duration:</h6>
                         <p class="text-bold">
-                            @(Array.IndexOf(ViewBag.Statistics.DurationCounts, ViewBag.MaxDuration)) Months
+                            @(Array.IndexOf(ViewBag.Statistics.DurationCounts, ViewBag.MaxDuration)) Month(s)
                         </p>
                     </div>
                 </div>
