--- a/AlgoLoan/Views/Provider/Details.cshtml
+++ b/AlgoLoan/Views/Provider/Details.cshtml
@@ -14,7 +14,7 @@
                     </div>
                     <div class="col-md-9 text-left">
                         <h6 class="ad-info text-uppercase mb-2">Company Name:</h6>
-                        <p>
+                        <p class="text-bold">
                             @Model.name
                         </p>
                     </div>
@@ -26,7 +26,7 @@
                     </div>
                     <div class="col-md-9 text-left">
                         <h6 class="ad-info text-uppercase mb-2">Loan Duration:</h6>
-                        <p>
+                        <p class="text-bold">
                             @ViewBag.Search.duration Months
                         </p>
                     </div>
@@ -38,8 +38,19 @@
                     </div>
                     <div class="col-md-9 text-left">
                         <h6 class="ad-info text-uppercase mb-2">Loan Amount:</h6>
-                        <p>
+                        <p class="text-bold">
                             @(ViewBag.Search.amount.ToString("C", CultureInfo.CreateSpecificCulture("ng-NG")))
+                        </p>
+                    </div>
+                </div>
+                <div class="row bg-light p-2 ml-2 mb-2">
+                    <div class="col-md-3 text-center">
+                        <i class="fa fa-money-bill-alt" style="font-size: 3rem;"></i>
+                    </div>
+                    <div class="col-md-9 text-left">
+                        <h6 class="ad-info text-uppercase mb-2">Total Repayment:</h6>
+                        <p class="text-bold">
+                            @ViewBag.TotalAmount.ToString("C", CultureInfo.CreateSpecificCulture("ng-NG"))
                         </p>
                     </div>
                 </div>
@@ -67,10 +78,6 @@
                             </tr>
                         }
                     </tbody>
-                    <tr>
-                        <td colspan="3" class="bold-black">Total Amount Paid</td>
-                        <td colspan="2">@ViewBag.TotalAmount.ToString("C", CultureInfo.CreateSpecificCulture("ng-NG"))</td>
-                    </tr>
                 </table>
                 @using (@Html.BeginForm("Details", "Provider", FormMethod.Post))
                 {
